--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,22 @@
-body { background: white; }
+@charset "UTF-8";
+@import "variables";
+@import "fonts";
+@import "core.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/menu.scss";
+@import "blocks/page-main.scss";
+@import "blocks/promo.scss";
+@import "blocks/slogan.scss";
+@import "blocks/landmark.scss";
+@import "blocks/advantage-living.scss";
+@import "blocks/living.scss";
+@import "blocks/advantage-location.scss";
+@import "blocks/location.scss";
+@import "blocks/invitation.scss";
+@import "blocks/map.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
+
