--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -14,22 +14,7 @@
 }
 
 .main-nav__toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  content: "";
-
-  display: block;
-
-  width: 23px;
-  height: 22px;
-
-  border: none;
-  background-image: url("../../img/icon-cross.svg");
-  background-repeat: no-repeat;
-  background-color: transparent;
-  object-fit: contain;
-  background-size: 23px 22px;
+  @include insert-image($t:16px, $r:16px, $w:23px, $h:22px, $bi:url("../../img/icon-cross.svg"));
 }
 
 @media (min-width: $tablet-width) {
