--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -5,7 +5,8 @@
   width: 320px;
 
   background-color: $bg-main-color;
-  outline: 1px solid blue;  /* tmp */
+
+  @include box-shadow-left-right();
 }
 
 @media (min-width: $tablet-width) {
