--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 @import "variables";
 @import "fonts";
+@import "mixins";
 @import "core.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/container.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/menu.scss";
@@ -19,4 +21,22 @@
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+//
+@import "blocks/photos.scss";
+@import "blocks/photo.scss";
+@import "blocks/video.scss";
+//
+@import "blocks/reviews.scss";
+@import "blocks/form.scss";
+@import "blocks/person.scss";
+@import "blocks/contact.scss";
+@import "blocks/row.scss";
+@import "blocks/legend.scss";
+//
+@import "blocks/unit.scss";
+@import "blocks/impression.scss";
+@import "blocks/visited.scss";
+@import "blocks/emotions.scss";
+//
+@import "blocks/card.scss";
 
