--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,6 +1,4 @@
-.video {
-  background-color: rgb(240, 235, 235); /*tmp*/
-}
+// .video {}
 
 .video__words-wrap {
   padding: 20px 42px;
@@ -21,19 +19,44 @@
 }
 
 .video__video-wrap {
+  line-height: 0;
   text-align: center;
 }
 
-//.video__video {}
+.video__video {
+  position: relative;
 
-//.video__controls {}
+  width: 321px;
+  height: 201px;
+
+  background-image: url("../../img/video-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 321px 201px;
+
+  z-index: 1;
+}
+
+.video__controls {
+  position: relative;
+
+  width: 280px;
+  margin: 0 auto;
+
+  z-index: 2;
+}
 
 @media (min-width: $tablet-width) {
   .video__video {
     outline: 1px dotted grey;
     width: 648px;
-    height: 449px;
-    //background-image: url("../../img/video-tablet@1x.jpg");
+    height: 499px;
+    background-image: url("../../img/video-tablet@1x.jpg");
+    background-size: 648px 499px;
+  }
+
+  .video__controls {
+    width: 648px;
   }
 }
 
@@ -42,6 +65,11 @@
     outline: 2px dotted yellowgreen;
     width: 800px;
     height: 500px;
-    //background-image: url("../../img/video-desktop@1x.jpg");
+    background-image: url("../../img/video-desktop@1x.jpg");
+    background-size: 800px 500px;
+  }
+
+  .video__controls {
+    width: 800px;
   }
 }
