--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/photos.scss";
 @import "blocks/photo.scss";
 @import "blocks/video.scss";
+@import "blocks/panel.scss";
 //
 @import "blocks/reviews.scss";
 @import "blocks/form.scss";
