--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "core.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/container.scss";
+@import "blocks/wrapper.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/menu.scss";
@@ -22,8 +23,8 @@
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
 //
-@import "blocks/photos.scss";
-@import "blocks/photo.scss";
+@import "blocks/media.scss";
+@import "blocks/p.scss";
 @import "blocks/video.scss";
 @import "blocks/panel.scss";
 //
