--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -5,10 +5,10 @@
 
   // outline: 2px dotted red;
 
-  &--divider {
-    width: calc(100% + 40px);  // 40px = padding-left + padding-right
-    margin-left: -20px;
-    height: 1px;
-    background-color: $divider-color;
-  }
+  // &--divider {
+  //   width: calc(100% + 40px);  // 40px = padding-left + padding-right
+  //   margin-left: -20px;
+  //   height: 1px;
+  //   background-color: $divider-color;
+  // }
 }
