--- a/source/sass/blocks/visited.scss
+++ b/source/sass/blocks/visited.scss
@@ -1,13 +1,36 @@
-//.visited {}
+.visited {
+  display: flex;
+  flex-direction: column;
+}
+
+.visited__title {
+  display: block;
+
+  @include set-font($fz:18px, $lh:26px, $ta:center);
+}
+
+.visited__block {
+  display: flex;
+  flex-direction: column;
+}
+
+.visited__item {
+  //outline: 1px dotted red;
+  width: 280px;
+  margin-bottom: 29px;
+}
 
 .visited__label {
   position: relative;
 
   display: block;
-  height: 51px;
+  min-height: 51px;
   padding-left: 75px;
   padding-top: 12px;
-  margin-bottom: 29px;
+
+  &:nth-last-of-type(1) {
+    margin-bottom: 0;
+  }
 
   @include set-font($fz:18px, $lh:26px);
   text-transform: none;
@@ -15,11 +38,14 @@
   &::before {
     position: absolute;
     content: "";
-    top: 0;
+    // top: 0;
+    // left: 0;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
 
     width: 51px;
-    height: 100%;
+    height: 51px; //100%;
 
     border-radius: 5px;
     background-color: $elem-outer-fresh-color;
@@ -40,7 +66,7 @@
   }
 }
 
-.visited__item {
+.visited__input {
   &:checked + .visited__label::before {
     background-color: $elem-outer-hover-color;
   }
@@ -73,5 +99,65 @@
 
   &:focus + .visited__label {
     color: lighten($secondary-text-color, 50%);
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .visited {
+    // outline: 1px dotted blue;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .visited__title {
+    position: relative;
+    padding-left: 185px;
+    padding-right: 185px;
+
+    @include set-font($fz:21px, $lh:26px, $ta:center);
+
+    &::before {
+      @include draw-line-left($t:16px, $l:0, $w:100px);
+    }
+
+    &::after {
+      @include draw-line-right($t:16px, $r:0, $w:100px);
+    }
+  }
+
+  .visited__block {
+    //outline: 4px dotted green;
+
+    display: flex;
+    flex-direction: row;
+  }
+
+  .visited__item {
+    width: 240px;
+    margin-bottom: 42px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .visited__item {
+    margin-bottom: 50px;
+  }
+
+  .visited__title {
+    padding-left: 340px;
+    padding-right: 340px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .visited__title {
+    &::before {
+      @include draw-line-left($t:16px, $l:0, $w:260px);
+    }
+
+    &::after {
+      @include draw-line-right($t:16px, $r:0, $w:260px);
+    }
   }
 }
